# jsoncrypt

./: ChangeLog  README.md  pyproject.toml
docs/: CONTRIBUTING.md  USAGE.md
src/jsoncrypt/: jc.py  jsoncrypt.py
test/: test_jsoncrypt.py
